apps/auth-server/overlays/dev/deployment.network-tls-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
spec:
  template:
    spec:
      containers:
        - name: auth-server
          volumeMounts:
            - name: public-truststore
              mountPath: /work
              readOnly: true
      volumes:
        - name: public-ca-cert
          configMap:
            name: public-ca-cert
        - name: public-truststore
          emptyDir: {}
